welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: reassignment to val
	if (a=b) {return 4*a}
             ^